[lworld] C2 compilation fails with assert(field_type->is_loaded()) failed: field type must be loaded

XMLWordPrintable

      Reported by [~mcimadamore]:

      # Internal Error (/oracle/valhalla-panama/open/src/hotspot/share/ci/ciTypeFlow.cpp:813), pid=159769, tid=159792
      # assert(field_type->is_loaded()) failed: field type must be loaded

      Current CompileTask:
      C2: 2560 873 4 jdk.internal.foreign.MemorySegmentImpl::asSlice (6 bytes)

      Stack: [0x00007f558c33f000,0x00007f558c440000], sp=0x00007f558c43b360, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x6a2d2e] ciTypeFlow::StateVector::do_withfield(ciBytecodeStream*)+0xa6
      V [libjvm.so+0x6a4737] ciTypeFlow::StateVector::apply_one_bytecode(ciBytecodeStream*)+0x142f
      V [libjvm.so+0x6a804f] ciTypeFlow::flow_block(ciTypeFlow::Block*, ciTypeFlow::StateVector*, ciTypeFlow::JsrSet*)+0x27b
      V [libjvm.so+0x6a91ec] ciTypeFlow::df_flow_types(ciTypeFlow::Block*, bool, ciTypeFlow::StateVector*, ciTypeFlow::JsrSet*)+0x312
      V [libjvm.so+0x6a94e4] ciTypeFlow::flow_types()+0x114
      V [libjvm.so+0x6a9f37] ciTypeFlow::do_flow()+0x10b
      V [libjvm.so+0x67796f] ciMethod::get_flow_analysis()+0x7d
      V [libjvm.so+0x501d1c] InlineTree::check_can_parse(ciMethod*)+0x66
      V [libjvm.so+0x502264] InlineTree::ok_to_inline(ciMethod*, JVMState*, ciCallProfile&, WarmCallInfo*, bool&)+0x252
      V [libjvm.so+0x84af03] Compile::call_generator(ciMethod*, int, bool, JVMState*, bool, float, ciKlass*, bool)+0x657
      V [libjvm.so+0x84caf6] Parse::do_call()+0x9d8
      V [libjvm.so+0xf9710e] Parse::do_one_bytecode()+0x4586
      V [libjvm.so+0xf7fa00] Parse::do_one_block()+0x4dc
      V [libjvm.so+0xf7b73b] Parse::do_all_blocks()+0x3b7
      V [libjvm.so+0xf7b275] Parse::Parse(JVMState*, ciMethod*, float)+0x13ab
      V [libjvm.so+0x60a1f6] ParseGenerator::generate(JVMState*)+0xfc
      V [libjvm.so+0x84cd4a] Parse::do_call()+0xc2c
      V [libjvm.so+0xf9710e] Parse::do_one_bytecode()+0x4586
      V [libjvm.so+0xf7fa00] Parse::do_one_block()+0x4dc
      V [libjvm.so+0xf7b73b] Parse::do_all_blocks()+0x3b7
      V [libjvm.so+0xf7b275] Parse::Parse(JVMState*, ciMethod*, float)+0x13ab
      V [libjvm.so+0x60a1f6] ParseGenerator::generate(JVMState*)+0xfc
      V [libjvm.so+0x84cd4a] Parse::do_call()+0xc2c
      V [libjvm.so+0xf9710e] Parse::do_one_bytecode()+0x4586
      V [libjvm.so+0xf7fa00] Parse::do_one_block()+0x4dc
      V [libjvm.so+0xf7b73b] Parse::do_all_blocks()+0x3b7
      V [libjvm.so+0xf7b275] Parse::Parse(JVMState*, ciMethod*, float)+0x13ab
      V [libjvm.so+0x60a1f6] ParseGenerator::generate(JVMState*)+0xfc
      V [libjvm.so+0x71a4c4] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0xcd2
      V [libjvm.so+0x6085a1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x15b
      V [libjvm.so+0x7388fd] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x895
      V [libjvm.so+0x737589] CompileBroker::compiler_thread_loop()+0x3df
      V [libjvm.so+0x1162174] compiler_thread_entry(JavaThread*, Thread*)+0x69
      V [libjvm.so+0x115d49e] JavaThread::thread_main_inner()+0x14c
      V [libjvm.so+0x115d34a] JavaThread::run()+0x118
      V [libjvm.so+0x11593ee] Thread::call_run()+0x180

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: