8254985: [lworld] C2 compilation fails with assert(field_type->is_loaded()) failed: field type must be loaded